--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
 
         <p class="text-2xl font-extrabold text-red-600 mt-1">
-            LEGEND BINARY TRADER
+            TRADER SUCCESS 
         </p>
 
         <a href="https://t.me/+_3v8q8guVFc5OWU9"
